--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,2 @@
-/Figure/obj/Debug/net6.0/.NETCoreApp,Version=v6.0.AssemblyAttributes.cs
-/Figure/obj/Debug/net6.0/Figure.AssemblyInfo.cs
-/Figure/obj/Debug/net6.0/Figure.AssemblyInfoInputs.cache
-/Figure/obj/Debug/net6.0/Figure.assets.cache
-/Figure/obj/Debug/net6.0/Figure.csproj.AssemblyReference.cache
-/Figure/obj/Figure.csproj.nuget.dgspec.json
-/Figure/obj/Figure.csproj.nuget.g.props
-/Figure/obj/Figure.csproj.nuget.g.targets
-/Figure/obj/Debug/net6.0/Figure.GeneratedMSBuildEditorConfig.editorconfig
-/Figure/obj/Debug/net6.0/Figure.GlobalUsings.g.cs
-/Figure/obj/project.assets.json
-/Figure/obj/project.nuget.cache
-/Figure/obj/project.packagespec.json
-/Figure/obj/rider.project.restore.info
+/Figure/obj/
 /.idea/.idea.Figure/.idea/vcs.xml
